--- a/index.html
+++ b/index.html
@@ -3,19 +3,128 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Home - Express App</title>
     <style>
-        .home{
-            background-color: purple;
-            color: white;
-            padding: 20;
-        }
-        body{
+        body {
+            font-family: 'Arial', sans-serif;
             margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+            color: #333;
+            overflow-x: hidden;
+        }
+        header {
+            background-color: #4CAF50;
+            color: white;
+            padding: 20px;
+            text-align: center;
+            position: fixed;
+            width: 100%;
+            top: 0;
+            z-index: 1000;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        }
+        header h1 {
+            margin: 0;
+        }
+        .hero {
+            background: linear-gradient(135deg, #1e90ff, #4caf50);
+            color: white;
+            padding: 100px 20px;
+            text-align: center;
+        }
+        .hero h2 {
+            font-size: 3em;
+            margin-bottom: 20px;
+        }
+        .hero p {
+            font-size: 1.2em;
+            margin-bottom: 30px;
+        }
+        .hero button {
+            background-color: #ff6347;
+            color: white;
+            padding: 15px 30px;
+            border: none;
+            border-radius: 4px;
+            font-size: 1em;
+            cursor: pointer;
+            transition: background-color 0.3s;
+        }
+        .hero button:hover {
+            background-color: #ff4500;
+        }
+        .features {
+            display: flex;
+            justify-content: center;
+            flex-wrap: wrap;
+            padding: 60px 20px;
+            background-color: white;
+        }
+        .feature {
+            width: 300px;
+            padding: 20px;
+            margin: 20px;
+            text-align: center;
+            background-color: #f9f9f9;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+            border-radius: 8px;
+            transition: transform 0.3s;
+        }
+        .feature:hover {
+            transform: translateY(-10px);
+        }
+        .feature img {
+            width: 100px;
+            height: 100px;
+            margin-bottom: 20px;
+        }
+        .feature h3 {
+            margin-bottom: 10px;
+        }
+        .footer {
+            background-color: #333;
+            color: white;
+            padding: 20px;
+            text-align: center;
+        }
+        @keyframes fadeIn {
+            from { opacity: 0; }
+            to { opacity: 1; }
+        }
+        .hero, .features, .footer {
+            animation: fadeIn 1.5s;
         }
     </style>
 </head>
 <body>
-<div class="home">Home section</div>
+    <header>
+        <h1>Express App</h1>
+    </header>
+    <div class="hero">
+        <h2>Welcome to Express App</h2>
+        <p>Build fast, reliable, and modern web applications with ease.</p>
+        <button>Get Started</button>
+    </div>
+    <div class="features">
+        <div class="feature">
+            <img src="https://source.unsplash.com/random/100x100?tech" alt="Feature 1">
+            <h3>Fast Performance</h3>
+            <p>Experience blazing fast speeds with our optimized backend.</p>
+        </div>
+        <div class="feature">
+            <img src="https://source.unsplash.com/random/100x100?coding" alt="Feature 2">
+            <h3>Modern Design</h3>
+            <p>Create beautiful applications with our modern design templates.</p>
+        </div>
+        <div class="feature">
+            <img src="https://source.unsplash.com/random/100x100?security" alt="Feature 3">
+            <h3>Secure</h3>
+            <p>Ensure your applications are secure with our built-in security features.</p>
+        </div>
+    </div>
+    <footer class="footer">
+        <p>&copy; 2024 Express App. All rights reserved.</p>
+    </footer>
 </body>
 </html>
